# AutoLimbUSscan

./: README.md
catkin_workspace/: readme.md
catkin_workspace/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_workspace/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
catkin_workspace/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
catkin_workspace/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
catkin_workspace/devel/.private/cv_bridge/: .catkin
catkin_workspace/devel/.private/cv_bridge/lib/pkgconfig/: cv_bridge.pc
catkin_workspace/devel/.private/cv_bridge/lib/python3/dist-packages/cv_bridge/: __init__.py
catkin_workspace/devel/.private/cv_bridge/share/cv_bridge/cmake/: cv_bridgeConfig.cmake
catkin_workspace/install/lib/pkgconfig/: catkin_tools_prebuild.pc
catkin_workspace/install/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
catkin_ws/: readme.md
catkin_ws/src/ROS_VisionControl/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/ROS_VisionControl/cmake/: Macros.cmake  UserTemplate.user.in  definitions.cmake
catkin_ws/src/ROS_VisionControl/config/: IFLUSCalibration.config
catkin_ws/src/ROS_VisionControl/include/vision_control/: ConfidentMapConvex.h  MonitorChangeThread.h  VisionAlgorithm.h  VisionController.h  VisionFactory.h  VisionPlugin.h  VisionStreamOptimizer.h
catkin_ws/src/ROS_VisionControl/src/: ConfidentMapConvex.cpp  MonitorChangeThread.cpp  VisionAlgorithm.cpp  VisionController.cpp  VisionFactory.cpp  VisionPlugin.cpp  VisionStreamOptimizer.cpp  controller.ui
catkin_ws/src/iiwa_stack/iiwa_description/urdf/: iiwa.urdf
catkin_ws/src/iiwa_stack/iiwa_moveit/launch/: moveit_planning_execution.launch
catkin_ws/src/iiwa_stack/iiwa_ros/src/command/: generic_command.cpp
catkin_ws/src/iiwa_stack/iiwa_ros/src/service/: time_to_destination.cpp
catkin_ws/src/shape_registration/: CMakeLists.txt  LICENSE  package.xml
catkin_ws/src/shape_registration/algorithms/: icp_algorithm.cpp
catkin_ws/src/shape_registration/algorithms/include/: icp_algorithm.hpp
catkin_ws/src/shape_registration/launch/: aruco_checker.launch  calibration_checker.launch  chessboard.launch  eye_on_base_calibration.launch  generate_point_cloud.launch  image_saving_for_training.launch  movement_monitoring_and_tracking.launch  registration.launch  start_azure_rectifiers.launch  test_depth_vals.launch  trajectory_extraction.launch
catkin_ws/src/shape_registration/utils/: aruco_checker_node.cpp  calibration_checker_node.cpp  control_the_robot.cpp  hand_eye_calibration.cpp  preprocessing.cpp
catkin_ws/src/shape_registration/utils/include/: helper.hpp  preprocessing.hpp
catkin_ws/src/vesselSegment/: CMakeLists.txt  package.xml
catkin_ws/src/vesselSegment/scripts/: dice.py  generateVideo.py  inference.py  inferenceOF.py  inferenceUnet.py  train_eval.py  train_eval_of.py
catkin_ws/src/vesselSegment/scripts/flownet2/: install_py2.sh  models.py
catkin_ws/src/vesselSegment/scripts/modules/: DataSet.py  Discriminator.py  Losses.py  UNet.py
openposeWithKinect/: readme.md
openposeWithKinect/examples/tutorial_api_cpp/: 01_body_from_image_default.cpp  CMakeLists.txt
openposeWithKinect/examples/user_code/: CMakeLists.txt
openposeWithKinect/examples/user_code/vessel/: CMakeLists.txt
openposeWithKinect/examples/user_code/vessel/OpenMesh/Apps/ProgViewer/: CMakeLists.txt
openposeWithKinect/examples/user_code/vessel/OpenMesh/Apps/QtViewer/: CMakeLists.txt
openposeWithKinect/examples/user_code/vessel/OpenMesh/Apps/Subdivider/SubdividerGui/: CMakeLists.txt
openposeWithKinect/examples/user_code/vessel/OpenMesh/Apps/VDProgMesh/Synthesizer/: CMakeLists.txt
openposeWithKinect/examples/user_code/vessel/OpenMesh/Tools/Decimater/: BaseDecimaterT.hh  DecimaterT_impl.hh
openposeWithKinect/examples/user_code/vessel/OpenMesh/Tools/Smoother/: LaplaceSmootherT.hh  LaplaceSmootherT_impl.hh
openposeWithKinect/examples/user_code/vessel/OpenMesh/Tools/VDPM/: VHierarchyWindow.cc
openposeWithKinect/examples/user_code/vessel/cmake/: FindNanoFlann.cmake
openposeWithKinect/examples/user_code/vessel/src/: NonRigidreg.cpp  NonRigidreg.h  Registration.cpp  Registration.h  clipArm.h  detectBody.h  main.cpp  workutils.h
openposeWithKinect/examples/user_code/vessel/src/geodesic/: geodesic_algorithm_base.h  geodesic_algorithm_exact.h  geodesic_algorithm_exact_elements.h  geodesic_constants_and_simple_functions.h  geodesic_memory.h
openposeWithKinect/examples/user_code/vessel/src/tools/: Types.h  io_mesh.h  nanoflann.h  nodeSampler.cpp  nodeSampler.h  tools.cpp  tools.h
openposeWithKinect/result/: LowerResult.txt  Lowersource.txt  Lowertarget.txt  UpperResult.txt  Upperres.stl  Uppersource.txt  Uppertarget.txt  clipXYZ.txt  distance.txt  euler.txt  featureXYZ.txt  segedArm.txt  segedArm1.ply  segedArm2.ply  spline.vtk  trajectory.txt  transformedTargetLower.ply  transformedTargetUpper.ply  whole_vessel_trajectory.txt  x.txt  y.txt  z.txt
openposeWithKinect/template/: LowerVessel.xyz  UpperVessel.xyz  sourcefeature.txt
