<?xml version="1.0"?>
<package>
  <name>markerless_RUSS</name>
  <version>0.0.1</version>
  <description>An empty description</description>

  <license>BSD</license>

  <author email="jzl96998@gmail.com">Zhongliang Jiang</author>
  <maintainer email="bob.someone@tum.de">Bob Someone</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  //JZL
  <build_depend>iiwa_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>iiwa_ros</run_depend>

  <build_depend>iiwa_msgs</build_depend>
  <run_depend>iiwa_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  //JZL
</package>
